examples/test/testpolicy7129.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy7129
  namespace: namespace436
spec:
  podSelector:
    matchLabels:
      key41: value14
      key0: value35
      key23: value14
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key14: value21
          key2: value12
          key15: value11
      podSelector:
        matchLabels:
          key41: value1
          key9: value37
